--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.App-main {
+/*
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -36,4 +9,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+*/
+.App{
 
+}
+
+#table{
+    margin-bottom: 5rem;
+}
+
+#alert{
+    margin-top: 10rem;
+}
